--- a/src/artikel.html
+++ b/src/artikel.html
@@ -24,7 +24,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg shadow-sm">
       <div class="container-fluid px-25">
-        <a class="navbar-brand me-5" href="#">
+        <a class="navbar-brand" href="#">
           <img src="assets/logo.png" alt="" />
         </a>
         <button
@@ -38,49 +38,34 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <div
+          class="collapse navbar-collapse justify-content-center"
+          id="navbarText"
+        >
+          <ul class="navbar-nav mb-2 mb-lg-0 text-center me-5">
             <li class="nav-item">
-              <a class="nav-link" aria-current="page" href="index.html">Home</a>
-            </li>
-            <li class="nav-item">
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNavDarkDropdown"
-                aria-controls="navbarNavDarkDropdown"
-                aria-expanded="false"
-                aria-label="Toggle navigation"
+              <a class="nav-link active" aria-current="page" href="index.html"
+                >Home</a
               >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item dropdown">
-                    <a
-                      class="nav-link dropdown-toggle"
-                      href="#komoditas"
-                      role="button"
-                      data-bs-toggle="dropdown"
-                      aria-expanded="false"
-                    >
-                      Komoditas
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li>
-                        <a class="dropdown-item" href="#">Another action</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="#"
-                          >Something else here</a
-                        >
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Komoditas
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#artikel">Artikel</a>
@@ -92,16 +77,17 @@
               <a class="nav-link" href="#ebook">E-Book</a>
             </li>
           </ul>
-          <a
-            class="navbar-text text-login fs-4 fw-bold text-decoration-none"
-            href="#"
-          >
-            Login
-          </a>
+          <div class="text-center justify-content-center">
+            <a
+              class="navbar-text text-login ms-5 fw-bold text-decoration-none text-center"
+              href="#"
+            >
+              Login
+            </a>
+          </div>
         </div>
       </div>
     </nav>
-    <!-- end navbar -->
     <!-- end navbar -->
 
     <main class="heroArtikel">
@@ -117,29 +103,11 @@
         <section class="cardArtikel">
           <a href="artikelDetail.html" class="text-decoration-none text-black">
             <div class="card py-3 px-2 mt-4">
-              <div class="d-flex gap-3 align-items-center">
-                <div class="ms-3">
-                  <img src="assets/artikel1.png" alt="" />
-                </div>
-
-                <div class="artikelCardText">
-                  <h5 class="mb-2 fw-bold">
-                    Ekspor Indonesia Terus Melanjutkan Kinerja Positif
-                  </h5>
-                  <p>
-                    Ekspor Indonesia terus melanjutkan kinerja positif. Di bulan
-                    Oktober 2022, ekspor tercatat sebesar US$24,81 miliar atau
-                    tumbuh sebesar 12,3% (yoy).
-                  </p>
-                </div>
-              </div>
-            </div>
-          </a>
-          <a href="#" class="text-decoration-none text-black">
-            <div class="card py-3 px-2 mt-4">
-              <div class="d-flex align-items-center gap-3">
+              <div
+                class="d-lg-flex d-block d-sm-block align-items-center gap-3"
+              >
                 <div class="">
-                  <img src="assets/artikel2.png" alt="" />
+                  <img src="assets/artikel1.png" alt="" />
                 </div>
 
                 <div class="artikelCardText">
@@ -148,9 +116,8 @@
                   </h5>
                   <p>
                     Menteri Koperasi dan Usaha Kecil dan Menengah Teten Masduki
-                    mengakui ekspor yang dilakukan para pelaku <br />
-                    usaha, mikro, kecil, dan menengah (UMKM) di Indonesia masih
-                    sangat rendah.
+                    mengakui ekspor yang dilakukan para pelaku usaha, mikro,
+                    kecil, dan menengah (UMKM) di Indonesia masih sangat rendah.
                   </p>
                 </div>
               </div>
@@ -158,7 +125,9 @@
           >
           <a href="#" class="text-decoration-none text-black">
             <div class="card py-3 px-2 mt-4">
-              <div class="d-flex align-items-center gap-3">
+              <div
+                class="d-lg-flex d-block d-sm-block align-items-center gap-3"
+              >
                 <div class="">
                   <img src="assets/artikel3.png" alt="" />
                 </div>
@@ -169,8 +138,8 @@
                   </h5>
                   <p>
                     Menteri Pertahanan sekaligus calon presiden Nomor Urut 2
-                    Prabowo Subianto mengungkapkan RI bakal ekspor <br />
-                    bahan pangan dalam 4 tahun mendatang.
+                    Prabowo Subianto mengungkapkan RI bakal ekspor bahan pangan
+                    dalam 4 tahun mendatang.
                   </p>
                 </div>
               </div>
@@ -178,7 +147,9 @@
           >
           <a href="#" class="text-decoration-none text-black">
             <div class="card py-3 px-2 mt-4">
-              <div class="d-flex align-items-center gap-3">
+              <div
+                class="d-lg-flex d-block d-sm-block align-items-center gap-3"
+              >
                 <div class="">
                   <img src="assets/artikel4.png" alt="" />
                 </div>
@@ -189,8 +160,8 @@
                   </h5>
                   <p>
                     Sekretaris Kementerian Koordinator Bidang Perekonomian
-                    Susiwijono Moegiarso mengatakan revisi Peraturan <br />
-                    Pemerintah Nomor 123 Tahun 2015 perihal pajak ekspor.
+                    Susiwijono Moegiarso mengatakan revisi Peraturan Pemerintah
+                    Nomor 123 Tahun 2015 perihal pajak ekspor.
                   </p>
                 </div>
               </div>
@@ -198,9 +169,11 @@
           >
           <a href="#" class="text-decoration-none text-black">
             <div class="card py-3 px-2 mt-4">
-              <div class="d-flex align-items-center gap-3">
+              <div
+                class="d-lg-flex d-block d-sm-block align-items-center gap-3"
+              >
                 <div class="">
-                  <img src="assets/artikel1.png" alt="" />
+                  <img src="assets/artikel5.png" alt="" />
                 </div>
 
                 <div class="artikelCardText">
@@ -210,7 +183,6 @@
                   <p>
                     Satgas Peningkatan Ekspor Nasional telah menetapkan 12
                     negara prioritas tujuan ekspor Indonesia. Ini merupakan
-                    <br />
                     strategi dalam menjaga neraca perdagangan Indonesia di
                     tengah kondisi dinamika global.
                   </p>
@@ -253,27 +225,25 @@
           <img src="assets/logoKemendagri.png" class="img-fluid" alt="" />
           <img src="assets/logoSimple.png" alt="" class="mb-2" />
         </div>
-        <div class="justify-content-between d-flex mt-4">
-          <div>
+        <div class="justify-content-between d-md-flex d-block mt-4">
+          <div class="mt-md-0 mt-1">
             <p>
               Lorem ipsum dolor sit amet consectetur. Et lorem aliquam urna
-              faucibus <br />
-              molestie. Eu ipsum aenean sociis consequat fringilla. Adipiscing
-              orci risus lacus <br />
-              felis neque sit. Egestas nulla tristique est consequat risus sit
-              sapien ullamcorper.
+              faucibus molestie. Eu ipsum aenean sociis consequat fringilla.
+              Adipiscing orci risus lacus felis neque sit. Egestas nulla
+              tristique est consequat risus sit sapien ullamcorper.
             </p>
           </div>
 
-          <div class="d-flex gap-4">
+          <div class="d-flex gap-4 mt-md-0 mt-5">
             <img src="assets/facebook.svg" alt="" />
             <img src="assets/twitter.svg" alt="" />
             <img src="assets/Instagram.svg" alt="" />
           </div>
         </div>
       </div>
-      <div class="justify-content-between d-flex mt-5">
-        <div class="d-flex gap-4">
+      <div class="justify-content-end justify-content-md-between d-block mt-5">
+        <div class="d-flex gap-3 gap-md-4">
           <div class="d-flex gap-2">
             <img src="assets/phone.svg" alt="" />
             <p>Telepon: (021)</p>
@@ -288,13 +258,13 @@
             <img src="assets/database.svg" alt="" />
             <p>Data & Informasi</p>
           </div>
-          <div class="d-flex gap-2">
+          <div class="d-flex gap-2 align-items-center">
             <img src="assets/faq.svg" alt="" />
             <p>FAQ</p>
           </div>
           <div class="d-flex gap-2">
             <img src="assets/callcenter.svg" alt="" />
-            <p>Help Center (HERO)</p>
+            <p>Help Center</p>
           </div>
         </div>
       </div>
@@ -318,7 +288,7 @@
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
     <!-- link bootstrap js -->
-    <script src="vendors/js/bootstrap.min.js"></script>
+
     <script src="vendors/js/bootstrap.bundle.js"></script>
     <script src="index.js"></script>
   </body>
