--- a/src/artikelDetail.html
+++ b/src/artikelDetail.html
@@ -24,7 +24,7 @@
     <!-- navbar -->
     <nav class="navbar navbar-expand-lg shadow-sm">
       <div class="container-fluid px-25">
-        <a class="navbar-brand me-5" href="#">
+        <a class="navbar-brand" href="#">
           <img src="assets/logo.png" alt="" />
         </a>
         <button
@@ -38,49 +38,32 @@
         >
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarText">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+        <div
+          class="collapse navbar-collapse justify-content-center"
+          id="navbarText"
+        >
+          <ul class="navbar-nav mb-2 mb-lg-0 text-center me-5">
             <li class="nav-item">
               <a class="nav-link" aria-current="page" href="index.html">Home</a>
             </li>
-            <li class="nav-item">
-              <button
-                class="navbar-toggler"
-                type="button"
-                data-bs-toggle="collapse"
-                data-bs-target="#navbarNavDarkDropdown"
-                aria-controls="navbarNavDarkDropdown"
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
                 aria-expanded="false"
-                aria-label="Toggle navigation"
               >
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarNavDarkDropdown">
-                <ul class="navbar-nav">
-                  <li class="nav-item dropdown">
-                    <a
-                      class="nav-link dropdown-toggle"
-                      href="#komoditas"
-                      role="button"
-                      data-bs-toggle="dropdown"
-                      aria-expanded="false"
-                    >
-                      Komoditas
-                    </a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Action</a></li>
-                      <li>
-                        <a class="dropdown-item" href="#">Another action</a>
-                      </li>
-                      <li>
-                        <a class="dropdown-item" href="#"
-                          >Something else here</a
-                        >
-                      </li>
-                    </ul>
-                  </li>
-                </ul>
-              </div>
+                Komoditas
+              </a>
+              <ul class="dropdown-menu">
+                <li><a class="dropdown-item" href="#">Action</a></li>
+                <li><a class="dropdown-item" href="#">Another action</a></li>
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#">Something else here</a>
+                </li>
+              </ul>
             </li>
             <li class="nav-item">
               <a class="nav-link active" href="#artikel">Artikel</a>
@@ -92,19 +75,21 @@
               <a class="nav-link" href="#ebook">E-Book</a>
             </li>
           </ul>
-          <a
-            class="navbar-text text-login fs-4 fw-bold text-decoration-none"
-            href="#"
-          >
-            Login
-          </a>
+          <div class="text-center justify-content-center">
+            <a
+              class="navbar-text text-login ms-5 fw-bold text-decoration-none text-center"
+              href="#"
+            >
+              Login
+            </a>
+          </div>
         </div>
       </div>
     </nav>
     <!-- end navbar -->
-    <!-- end navbar -->
 
-    <main class="heroArtikel">
+    <!-- hero -->
+    <section class="heroArtikel">
       <!-- hero -->
       <div class="px-25 mt-3 container-fluid">
         <nav style="--bs-breadcrumb-divider: '>'" aria-label="breadcrumb">
@@ -116,7 +101,7 @@
           </ol>
         </nav>
         <div class="text-center mt-5">
-          <img src="assets/artikelHero.png" width="80%" alt="" />
+          <img src="assets/artikelHero.png" width="100%" alt="" />
         </div>
       </div>
       <!-- end hero -->
@@ -185,14 +170,15 @@
         </div>
       </section>
       <!-- end content -->
-    </main>
+    </section>
+    <!-- end hero -->
 
     <!-- artikel carousel -->
     <section class="artikelArtikel container-fluid">
       <div class="px-25 artikel">
         <h3 class="mb-3">Artikel Terkait</h3>
         <div class="row">
-          <div class="col-4">
+          <div class="col-auto col-sm-6 col-md-4 mt-2">
             <a href="#" class="text-decoration-none">
               <div class="card py-1 text-black">
                 <img
@@ -216,7 +202,7 @@
               </div>
             </a>
           </div>
-          <div class="col-4">
+          <div class="col-auto col-sm-6 col-md-4 mt-2">
             <a href="#" class="text-decoration-none">
               <div class="card py-1 text-black">
                 <img
@@ -240,7 +226,7 @@
               </div>
             </a>
           </div>
-          <div class="col-4">
+          <div class="col-auto col-sm-6 col-md-4 mt-2">
             <a href="#" class="text-decoration-none">
               <div class="card py-1 text-black">
                 <img
@@ -276,8 +262,10 @@
           <img src="assets/logoKemendagri.png" class="img-fluid" alt="" />
           <img src="assets/logoSimple.png" alt="" class="mb-2" />
         </div>
-        <div class="justify-content-between d-flex mt-4">
-          <div>
+        <div
+          class="justify-content-between align-items-center d-md-flex d-block mt-4"
+        >
+          <div class="mt-md-0 mt-1">
             <p>
               Lorem ipsum dolor sit amet consectetur. Et lorem aliquam urna
               faucibus <br />
@@ -288,15 +276,17 @@
             </p>
           </div>
 
-          <div class="d-flex gap-4">
-            <img src="assets/facebook.svg" alt="" />
-            <img src="assets/twitter.svg" alt="" />
-            <img src="assets/Instagram.svg" alt="" />
+          <div class="d-flex gap-4 mt-md-0 mt-5">
+            <a href="#"> <img src="assets/facebook.svg" alt="" /></a>
+            <a href="#"> <img src="assets/twitter.svg" alt="" /></a>
+            <a href="#"> <img src="assets/Instagram.svg" alt="" /></a>
           </div>
         </div>
       </div>
-      <div class="justify-content-between d-flex mt-5">
-        <div class="d-flex gap-4">
+      <div
+        class="justify-content-end d-md-flex d-block justify-content-md-between d-block mt-5"
+      >
+        <div class="d-flex gap-3 gap-md-4">
           <div class="d-flex gap-2">
             <img src="assets/phone.svg" alt="" />
             <p>Telepon: (021)</p>
@@ -311,13 +301,13 @@
             <img src="assets/database.svg" alt="" />
             <p>Data & Informasi</p>
           </div>
-          <div class="d-flex gap-2">
+          <div class="d-flex gap-2 align-items-center">
             <img src="assets/faq.svg" alt="" />
             <p>FAQ</p>
           </div>
           <div class="d-flex gap-2">
             <img src="assets/callcenter.svg" alt="" />
-            <p>Help Center (HERO)</p>
+            <p>Help Center</p>
           </div>
         </div>
       </div>
@@ -341,7 +331,7 @@
       src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"
     ></script>
     <!-- link bootstrap js -->
-    <script src="vendors/js/bootstrap.min.js"></script>
+
     <script src="vendors/js/bootstrap.bundle.js"></script>
     <script src="index.js"></script>
   </body>
